--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                         <i class="fas fa-crown"></i>
                     </div>
                     <div class="staff-info">
-                        <h3>AlexTheOwner</h3>
-                        <div class="staff-role">ВЛАДЕЛЕЦ</div>
-                        <p>Основатель сервера, занимается развитием и технической частью проекта.</p>
+                        <h3>bigboybenie</h3>
+                        <div class="staff-role">founder</div>
+                        <p>занимается развитием и технической частью проекта.</p>
                     </div>
                 </div>
                 
@@ -194,9 +194,9 @@
                         <i class="fas fa-user-shield"></i>
                     </div>
                     <div class="staff-info">
-                        <h3>ModerStevie</h3>
-                        <div class="staff-role">ГЛАВНЫЙ МОДЕРАТОР</div>
-                        <p>Следит за порядком на сервере, помогает игрокам и проводит ивенты.</p>
+                        <h3>idolz</h3>
+                        <div class="staff-role">so-founder</div>
+                        <p>занимается тех частью проекта и дизайнерской чатью</p>
                     </div>
                 </div>
                 
@@ -205,9 +205,9 @@
                         <i class="fas fa-code"></i>
                     </div>
                     <div class="staff-info">
-                        <h3>Dev_Creeper</h3>
-                        <div class="staff-role">РАЗРАБОТЧИК</div>
-                        <p>Создает уникальные плагины и улучшает техническую составляющую сервера.</p>
+                        <h3>diz_infa</h3>
+                        <div class="staff-role">developer/st.smm</div>
+                        <p>занимается продвижением сервера и отвечает за стаф</p>
                     </div>
                 </div>
             </div>
@@ -360,4 +360,5 @@
         });
     </script>
 </body>
+
 </html>
