--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     
                     <div class="social-links">
                         <a href="https://discord.gg/TqhKPq92tb"><i class="fab fa-discord"></i></a>
-                        <a href="t.me/Unique_SMP"><i class="fab fa-telegram"></i></a>
+                        <a href="https://t.me/Unique_SMP"><i class="fab fa-telegram"></i></a>
                     </div>
                 </div>
                 
@@ -362,4 +362,5 @@
 </body>
 
 </html>
+
 
